--- a/Project-GTA/support.html
+++ b/Project-GTA/support.html
@@ -175,6 +175,10 @@
             margin-top: 100px;
             margin-bottom: 100px;
         }
+
+         .f-a:hover {
+            color: yellow;
+        }
     </style>
 </head>
 
