--- a/Project-GTA/support.html
+++ b/Project-GTA/support.html
@@ -272,8 +272,8 @@
                 <a href="#">LEGAL</a>
             </div>
             <div style="display: flex; gap: 20px;">
-                <i class="bi bi-chat-right-quote-fill"></i>
-                <i class="bi bi-twitter"></i>
+                <i class="f-a bi bi-chat-right-quote-fill"></i>
+                <i class="f-a bi bi-twitter"></i>
             </div>
         </div>
         <div class="r-plus">
